RESOLVED FIXED279070
Render background-clip effects with a transparency layer instead of a buffer
https://bugs.webkit.org/show_bug.cgi?id=279070
Summary Render background-clip effects with a transparency layer instead of a buffer
Simon Fraser (smfr)
Reported 2024-09-03 10:05:19 PDT
We can use a transparently layer, instead of an ImageBuffer, to render `background-clip: text` and `background-clip: border-area`.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-03 10:05:39 PDT
Simon Fraser (smfr)
Comment 2 2024-09-03 10:12:27 PDT
EWS
Comment 3 2024-09-03 22:36:28 PDT
Committed 283135@main (9d5ce39e6de4): <https://commits.webkit.org/283135@main> Reviewed commits have been landed. Closing PR #33074 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.